--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-	background-image: url('background.jpg');
+	background-image: url('background.png');
 	background-size: auto;
 	font-family: Arial, sans-serif;
 	font-size: 16px;
