--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 	background-size: auto;
 	font-family: Arial, sans-serif;
 	font-size: 16px;
-	color: #fff;
+	color: #000;
 }
 
 .form-box {
