--- a/style.css
+++ b/style.css
@@ -1,111 +1,73 @@
-* {
-	margin: 0;
-	padding: 0;
-	font-family: 'Poppins', sans-serif;
-	box-sizing: border-box;
-	border-radius: 10px;
-	width: 90%;
-	max-width: 600px;
-}
-
-body {
-	background-image: url('background.png');
-	background-size: auto;
-	font-family: Arial, sans-serif;
-	font-size: 16px;
-	color: #000;
+.container {
+    background: url('images/background.jpg') no-repeat center center fixed;
+    background-size: cover;
+    height: 100vh;
 }
 
 .form-box {
-	width: 90%;
-	max-width: 450px;
-	position: absolute;
-	top: 0%;
-	left: 50%;
-	transform: translate(-50%, 50%);
-	background: #fff;
-	padding: 50px 60px 70px;
-	text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 50px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px #000000;
+    text-align: center;
+    width: 450px;
+    max-width: 90%;
 }
 
-.form-box h1 {
-	font-size: 30px;
-	margin-bottom: 60px;
-	color: #3c00a0;
-	position: relative;
-}
-
-.form-box h1::after {
-	content: '';
-	width: 30px;
-	height: 4px;
-	border-radius: 3px;
-	background: #3c00a0;
-	position: absolute;
-	bottom: -12px;
-	left: 50%;
-	transform: translateX(-50%);
-}
-
-.input-field {
-	background: #eaeaea;
-	margin: 15px 0;
-	border-radius: 3px;
-	display: flex;
-	align-items: center;
-	max-height: 65px;
-	transition: max-height 0.5s;
-	overflow: hidden;
-}
-
-input {
-	width: 100%;
-	background: transparent;
-	border: 0;
-	outline: 0;
-	padding: 18px 15px;
-}
-
-.input-field i {
-	margin-left: 15px;
-	color: #999;
-}
-
-form p {
-	text-align: left;
-	font-size: 13px;
-}
-
-form p a {
-	text-decoration: none;
-	color: #3c00a0;
-}
-
-.btn-field {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-}
-
-.btn-field button {
-	flex-basis: 48%;
-	background: #3c00a0;
-	color: #fff;
-	height: 40px;
-	border-radius: 20px;
-	border: 0;
-	outline: 0;
-	cursor: pointer;
-	transition: background 1s;
+#title {
+    margin-top: 0;
+    font-size: 3rem;
+    font-weight: bold;
 }
 
 .input-group {
-	height: 280px;
+    margin: 40px 0;
 }
 
-.btn-field button.disable {
-	background: #eaeaea;
-	color: #555;
+.input-field {
+    display: flex;
+    align-items: center;
+    margin: 20px 0;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+
+.input-field i {
+    margin-right: 10px;
+}
+
+.input-field input[type="text"],
+.input-field input[type="email"],
+.input-field input[type="password"] {
+    border: none;
+    background-color: transparent;
+    width: 100%;
+    outline: none;
+}
+
+.btn-field {
+    display: flex;
+    justify-content: space-between;
+}
+
+button {
+    padding: 10px 20px;
+    background-color: #000000;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+.disable {
+    opacity: 0.5;
+    cursor: default;
 }
 
 @media only screen and (min-width: 600px) {
