--- a/style.css
+++ b/style.css
@@ -57,19 +57,24 @@
 
 
 button {
-    padding: 10px 20px;
-    background-color: #000000;
-    color: #ffffff;
-    border: none;
-    border-radius: 5px;
-    font-size: 1.2rem;
-    cursor: pointer;
+  background-color: #f39c12;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  margin-right: 10px;
+  cursor: pointer;
 }
 
-.disable {
-    opacity: 0.5;
-    cursor: default;
+button.disable {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
+
+button:hover {
+  background-color: #e67e22;
+}
+
 
 @media only screen and (min-width: 600px) {
 	form {
