--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .container {
-    background: url('../images/background.jpg') no-repeat center center fixed;
+    background: url('background.jpg') no-repeat center center fixed;
     background-size: cover;
     height: 100vh;
 }
@@ -31,31 +31,25 @@
 }
 
 .input-field {
-  margin-bottom: 10px;
-  display: flex;
-  align-items: center;
-  background-color: white;
-  border-radius: 5px;
-}
-
-.input-field input {
-  flex: 1;
-  border: none;
-  outline: none;
-  padding: 10px;
-}
-
-.input-field i {
-    margin-right: 10px;
+  margin-bottom: 1.5rem;
+  position: relative;
 }
 
 .input-field input[type="text"],
 .input-field input[type="email"],
 .input-field input[type="password"] {
-    border: none;
-    background-color: transparent;
-    width: 100%;
-    outline: none;
+  border: none;
+  border-bottom: 2px solid #aaa;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  width: 100%;
+}
+
+.input-field i {
+  color: #aaa;
+  position: absolute;
+  top: 1.3rem;
+  left: 0.5rem;
 }
 
 .btn-field {
