--- a/style.css
+++ b/style.css
@@ -6,18 +6,20 @@
 }
 
 .form-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 50px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 20px #000000;
-    text-align: center;
-    width: 450px;
-    max-width: 90%;
+    background-color: #fff;
+    margin: 50px auto;
+    border-radius: 20px;
+    width: 500px;
+    height: 550px;
+    position: relative;
+    box-shadow: 0 10px 50px rgba(0, 0, 0, 0.1);
+    padding: 50px 30px 30px 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+
 
 #title {
     margin-top: 0;
@@ -32,8 +34,8 @@
 }
 
 .input-field {
-  margin-bottom: 1.5rem;
-  position: relative;
+    position: relative;
+    margin-bottom: 20px;
 }
 
 input[type="text"],
