--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .container {
-  background-image: url("https://source.unsplash.com/random");
+  background-image: url("background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
