--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-.container {
-  background-image: url("background.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 100vh;
+*body {
+	background-image: url('background.jpg');
+	background-size: auto;
+	background-repeat: no-repeat;
+	font-family: Arial, sans-serif;
+	font-size: 16px;
+	color: #000;
 }
 
 .form-box {
