--- a/style.css
+++ b/style.css
@@ -87,15 +87,14 @@ button:hover {
 }
 
 
-@media only screen and (min-width: 600px) {
-	form {
-		width: 50%;
-		padding: 40px;
-	}
+@media only screen and (max-width: 768px) {
+    .background {
+        padding: 0 5%;
+    }
 }
 
-@media only screen and (min-width: 1000px) {
-	form {
-		width: 30%;
-	}
+@media only screen and (max-width: 480px) {
+    .background {
+        padding: 0 2%;
+    }
 }
