--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+* {
+	margin: 0;
+	padding: 0;
+	font-family: 'Poppins', sans-serif;
+	box-sizing: border-box;
+	border-radius: 10px;
+	width: 90%;
+	max-width: 600px;
+	
+	
 body {
 	background-image: url('background.jpg');
 	background-size: auto;
