--- a/style.css
+++ b/style.css
@@ -90,10 +90,16 @@ button:hover {
     .background {
         padding: 0 5%;
     }
+	body {
+        background-image: linear-gradient(to right, #8a2be2, #eecbad, #f5f5f5);
+    }
 }
 
 @media only screen and (max-width: 480px) {
     .background {
         padding: 0 2%;
+    }
+	body {
+        background-image: linear-gradient(to right, #8a2be2, #eecbad, #f5f5f5);
     }
 }
