--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 	
 .body {
-	background-image: url('background.jpg');
+	background-image: linear-gradient(to right, #8a2be2, #eecbad, #f5f5f5);
 	background-size: auto;
 	font-family: Arial, sans-serif;
 	font-size: 16px;
